﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

------------------------------------------------------------------------------------------------------------------------
Git stable
------------------------------------------------------------------------------------------------------------------------

CONFIG:
	Removed: GUI_CERT_DIR variable (replaced by CONF_DIR variable)

DISTROS
	Re-added: Courier as alternative IMAP/POP3 servers (Debian Jessie)

ENGINE
	Changed: Dovecot SASL implementation is no longer used in Postfix (Replaced by Cyrus SASL)
	Changed: SASL authentication is now made against database directly (Postfix)
	Fixed: Backslash must be escaped in dovecot-sql.conf file (Dovecot SQL password)
	Fixed: In case the passphrase is missing, user must not be prompted to enter it (iMSCP::OpenSSL)
	Fixed: Missing EOL in SSL certificate containers (iMSCP::OpenSSL)
	Fixed: Quota script must ignore maildir which doesn't exist

GUI
	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function

INSTALLER
	Fixed: Bind9 cannot start if the resolvconf package is not configured yet (Debian Squeeze)
	Fixed: Installer hangs while packages installation (Debian Jessie)

TICKETS
	Fixed #1095: Bug - IP usage interface is broken
	Fixed #1099: Bug - SQL users which belong to an account which is being deleted are not removed from mysql table

------------------------------------------------------------------------------------------------------------------------
1.1.11
------------------------------------------------------------------------------------------------------------------------

2014-06-08: Laurent Declercq
	RELEASE i-MSCP 1.1.11

PLUGINS
	Changed: plugin's backend scripts are now loaded from main plugin directory to avoid too many IO operations
	Fixed: Plugin db updates are not applied when a new plugin version is uploaded through the plugin UI
	Fixed: Unable to delete plugins which are uninstalled
	Updated: Plugin API to version 0.2.10

ENGINE