@@ -8,16 +8,23 @@ Git stable
 CONFIG:
 	Removed: GUI_CERT_DIR variable (replaced by CONF_DIR variable)
 
+DATABASE:
+	Fixed: Error messages from database updates are not detailled
+	Fixed: Infinite loop in iMSCP_Update_Database::dropIndexByColumn()
+	Fixed: Undefined key KEY_NAME in iMSCP_Update_Database::dropIndexByColumn()
+	Fixed: Undefined offset in database update r169
+
 DISTROS
 	Re-added: Courier as alternative IMAP/POP3 servers (Debian Jessie)
 
 ENGINE
-	Changed: Dovecot SASL implementation is no longer used in Postfix (Replaced by Cyrus SASL)
 	Changed: SASL authentication is now made against database directly (Postfix)
 	Fixed: Backslash must be escaped in dovecot-sql.conf file (Dovecot SQL password)
+	Fixed: Backslash must be escaped in PhpMyAdmin configuration file (control user password)
 	Fixed: In case the passphrase is missing, user must not be prompted to enter it (iMSCP::OpenSSL)
 	Fixed: Missing EOL in SSL certificate containers (iMSCP::OpenSSL)
 	Fixed: Quota script must ignore maildir which doesn't exist
+	Removed: Dovecot SASL implementation is no longer used in Postfix (Replaced by Cyrus SASL)
 
 GUI
 	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function
@@ -25,6 +32,7 @@ GUI
 INSTALLER
 	Fixed: Bind9 cannot start if the resolvconf package is not configured yet (Debian Squeeze)
 	Fixed: Installer hangs while packages installation (Debian Jessie)
+	Fixed: Unable to migrate from ispCP (linked to the infinite loop in iMSCP_Update_Database::dropIndexByColumn())
 
 TICKETS
 	Fixed #1095: Bug - IP usage interface is broken
